tests/ui/deserialize_trait_object.stderr
error: deserialize is not supported for DSTs with trait object tails
  --> tests/ui/deserialize_trait_object.rs:8:1
   |
 8 | / struct DeserializeTraitObject {
 9 | |     id: i32,
10 | |     data: dyn MyTrait,
11 | | }
   | |_^
